Attempting to fix an issue with mobile that shows the loading animation off screen and lets the user scrollsideways.

--- a/browse.css
+++ b/browse.css
@@ -380,6 +380,7 @@ nav {
 
 .loading-animation {
     background-color: #4aa584;
+    overflow-x: hidden;
     width: calc(50%);
     height: 4px;
     animation: left-to-right 1600ms infinite;
@@ -698,5 +699,9 @@ nav {
     .movie__list {
         display: flex;
         flex-direction: column;
+    }
+
+    #browse {
+        overflow-x: hidden;
     }
 }
